force-app/main/default/objects/Invoice_Line_Items__c/Invoice_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <label>Invoice Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>