force-app/main/default/objects/Invoice_Line_Items__c/fields/InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLine__c</fullName>
    <externalId>true</externalId>
    <label>InvoiceLine</label>
    <length>199</length>
    <type>Text</type>
</CustomField>