force-app/main/default/objects/Invoice_Line_Items__c/fields/LengthUOM__c.field-meta.xml
<CustomField>
    <fullName>LengthUOM__c</fullName>
    <label>LengthUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>