force-app/main/default/objects/Invoice_Line_Items__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>PartNumber</label>
    <length>199</length>
    <type>Text</type>
</CustomField>