force-app/main/default/objects/Invoice_Line_Items__c/fields/WidthUOM__c.field-meta.xml
<CustomField>
    <fullName>WidthUOM__c</fullName>
    <label>WidthUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>